--- a/main.css
+++ b/main.css
@@ -23,8 +23,8 @@ html,body{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     z-index: 2;
     display: flex;
     justify-content: center;
