--- a/main.css
+++ b/main.css
@@ -45,7 +45,15 @@ html,body{
   border: none;
   margin: 0 4rem;
   padding: 0.5rem; 
-  background-color: #FFD58B; 
+  background-color: #FFD58B;
+}
+
+.b_prev{
+    opacity: 0;
+}
+
+.b_next{
+    opacity: 1;
 }
 
 .button:hover{
